assets/scss/3-modules/_mega-nav.scss
// Mega Nav displays expanded at 992px and larger
// 991px and lower displays the "hamburger" mobile-style menu
//===================================================

.navbar {
  background-color: $primary-blue;
  margin-top: 56px; // make room for the global-nav in mobile view
  z-index: 1032;
}

@media screen and (min-width: 992px) {
  .navbar {
    background-color: transparent;
    background-image: url(../../assets/img/menu-bg.png);
    background-position: center top;
    background-repeat: no-repeat;
    background-size: 3840px 271px;
    height: 251px;
    margin-top: 0;
    min-height: 251px;
    pointer-events: none;
    z-index: 1030;
  }
}

@media screen and (min-width:992px) {
  .navbar-nav {
    margin-top: -100px;
  }
}
// adds some margin below the link sets
.navbar .dropdown-menu div[class*="col"] {
  margin-bottom: 1rem;
}

.navbar .dropdown-menu {
  background-color: #f5f6f8 !important;
  border: none;
  margin-left: auto;
  margin-right: auto;
  margin-top: 60px;
}

// breakpoint and up - mega dropdown styles
@media screen and (min-width: 992px) {

  // remove the padding from the navbar so the dropdown hover state is not broken
  .navbar {
    padding-bottom: 0;
  }

  // remove the padding from the nav-item and add some margin to give some breathing room on hovers
  .navbar .nav-item {
    margin: 0 .25rem;
    padding: .5rem .5rem;
  }

@media screen and (min-width: 992px) {
    .navbar .nav-item {
      margin-top: 12px;
      padding-bottom: 12px;
    }
}

  // makes the dropdown full width
  .navbar .dropdown {
    position: static;
  }

  .navbar .dropdown-menu {
    border: none;
    left: 0;
    right: 0;
  // height of nav-item
    top: 50px;
    width: 90%;
  }

  @-webkit-keyframes meganav {
    0% {opacity: 0;}
    100% {opacity: 1;}
  }
  @keyframes meganav {
    0% {opacity: 0;}
    100% {opacity: 1;}
  }
}

// shows the dropdown menu on hover
@media screen and (min-width: 992px) {
  .navbar .dropdown:hover .dropdown-menu,
  .navbar .dropdown .dropdown-menu:hover {
    -webkit-animation-duration: .6s;
    animation-duration: .6s;
    -webkit-animation-name: meganav;
    animation-name: meganav;
    display: block !important;
  }
}

.dropdown:hover,
.dropdown:hover a.nav-link {
  background-color: #f5f6f8;
  color: $primary-blue !important;
}

@media screen and (min-width: 992px) {
  .drop-pad {
    padding-top: 25px;
  }
}

.nav-row {
  margin-bottom: 0;
  margin-top: 0;
  padding-bottom: 0;
  padding-top: 0;
}

@media screen and (min-width: 992px) {
  .nav-row {
    border-bottom: 2px $primary-blue solid;
    line-height: .5em;
    margin-bottom: 10px;
  }
}

.dark-text {
  color: $primary-blue !important;
}

.dark-text:hover {
  color: $primary-red !important;
}

.nav-img {
  margin-left: -10px;
  margin-top: 20px;
}

@media screen and (min-width: 1100px) {
  .nav-img {
    margin-bottom: 20px;
    margin-left: -20px;
  }
}

@media screen and (min-width: 1600px) {
  .nav-img {
    margin-left: -80px;
  }
}

.no-pad {
  margin-bottom: 0;
  margin-top: 0;
  padding-bottom: 0;
  padding-top: 0;
}

.facilities-drop-pad {
  padding-top: 80px;
}

.donate-drop-pad {
  padding-top: 80px;
}

.about-drop-pad {
  padding-top: 50px;
}


.cavs-logo {
  height: auto;
  position: absolute;
  top: 15px;
  width: 150px;
  z-index: 9999;
}

@media screen and (min-width: 992px) {
  .cavs-logo {
    top: 10px;
    width: 15%;
  }
}

.nav-split {
  margin-right: 340px !important;
}

.center-logo {
  left: 98%;
  margin-left: -105px;
  margin-top: -95px;
  position: absolute;
  width: 100px;
}

@media screen and (min-width: 360px) {
  .center-logo {
    margin-left: -110px;
  }
}

@media screen and (min-width: 488px) {
  .center-logo {
    margin-left: -130px;
    width: 110px;
  }
}

@media screen and (min-width: 576px) {
  .center-logo {
    left: 98%;
    margin-left: -150px;
    margin-top: -100px;
    width: 130px;
  }
}

@media screen and (min-width: 992px) {
  .center-logo {
    left: 50%; // center the absolutely positioned item
    margin-left: -105px;  // offset the width of the item to make true center
    margin-top: -115px; // position it vertically
    width: 210px;
  }
}

// Don't display the dropdown carrots for menu items
.dropdown-toggle::after {
  display: none;
}

@media screen and (min-width: 992px) {
  .clickable {
    margin-left: auto;
    margin-right: auto;
    pointer-events: auto;
  }
}

.recruit-pad {
  padding-top: 20px;
}

@supports (-webkit-overflow-scrolling: touch) and (max-width: 414px) {
  // CSS specific to iOS devices
  .center-logo {
    margin-top: -55px;
  }
}

